src/examples/valid/non-plot/assignment.ra
func my_function(): void {
  b = 2;
}

func main(): void {
  a = 1;
  global c = 2;
  a = 2;
  b = 1;
  print(a, c);
}
