src/examples/invalid/dynamic/non-float-string.ra
func main(): void {
  a = "one" * 2;
  print(a);
}
